traces/bug_575.txt
src/femlib/FESpace.cpp:690: error: DEAD_STORE
  The value written to &NbDfOnElement (type int) is never used.
Showing all 1 steps of the trace


src/femlib/FESpace.cpp:690:3: Write of unused value
688.     int NbDfOnSommet=TFE.NbDfOnVertex;
689.     int NbDfOnEdge=TFE.NbDfOnEdge;
690.     int NbDfOnElement=TFE.NbDfOnElement;
         ^
691.     int NbNodeonVertex=0;
692.     int NbNodeonEdge=0;
